fix for menu aspect ratio on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -592,7 +592,7 @@ aside #topmenu ul li span {
 aside nav ul {
 	padding: 10px 0 0 10px;
 	float: left;
-	margin-right: 80px;
+	margin-right: 40px; /*safeguard for mobile issue. is usually 80px*/
 }
 
 /*fixes mobile menu issue*/
